--- a/index.html
+++ b/index.html
@@ -4,82 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Leve</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        .navbar {
-            background-color: #4CAF50;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            padding: 15px 0;
-        }
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            padding: 14px 20px;
-            font-size: 18px;
-            margin: 0 15px;
-        }
-        .navbar a:hover {
-            background-color: #45a049;
-            border-radius: 5px;
-        }
-        .section {
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: justify;
-        }
-        .profissionais {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: wrap;
-        }
-        .profissional {
-            text-align: center;
-        }
-        .profissional img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            display: block;
-            margin: 0 auto;
-        }
-        .formulario {
-            max-width: 400px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            background-color: #f9f9f9;
-            text-align: left;
-        }
-        .formulario input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .formulario button {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .formulario button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
