--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica Leve</title>
-    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- menu que fica no início da tela com 4 links -->
     <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#especialidades">Especialidades</a>
         <a href="#especialistas">Especialistas</a>
         <a href="#contato">Contato</a>
+        <a href="#formulario">formulário</a>
     </nav>
 
+    <!-- esta é a seção de Home, que possui um título principal e um sub-título h3 e dois parágrafos apresentando a Clínica-->
     <section id="home" class="section">
         <h1>Bem-vindo à Clínica Leve</h1>
         <h3>Visão geral</h3>
@@ -26,6 +28,7 @@
         </p>
     </section>
 
+    <!-- Esta é a seção com título Nossas Especialidades, com uma lista de especialidades, que contém 3 ítens -->
     <section id="especialidades" class="section">
         <h2>Nossas Especialidades</h2>
         <ul>
@@ -35,6 +38,7 @@
         </ul>
     </section>
 
+    <!-- Esta é a seção de especialistas, onde são mostrados a imagem e o nome dos especialistas, mostrados em divs com a mesma classe -->
     <section id="especialistas" class="section">
         <h2>Nossos Especialistas</h2>
         <div class="profissionais">
@@ -53,11 +57,16 @@
         </div>
     </section>
 
+    <!-- Esta é a seção de contato, onde é apresentado o endereço da clínica -->
     <section id="contato" class="section">
         <h2>Contato</h2>
-        <p>Nosso endereço: <strong>Brasília-DF</strong></p>
+        <p><strong>Nosso endereço:</strong></p>
+        <p>SDN CNB - Conjunto A</p>
+        <p>Asa Norte - Brasília/DF</p>
+        <p>CEP: 70.077-900</p>
     </section>
 
+    <!-- Esta é a seção que possui um formulário estático que apresenta 4 campos obrigatórios para preenchimento e um botão para enviar as informações -->
     <section id="formulario" class="section">
         <h2>Saiba Mais</h2>
         <form class="formulario">
